# projectavatar

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.base.json
.changeset/: config.json  fix-plugin-id-match-package.md  fix-register-command-api.md  yellow-shoes-doubt.md
.github/workflows/: build-desktop.yml  deploy-relay.yml  deploy-web.yml  publish-plugin.yml
clip-manager/: index.html  package.json  tsconfig.json  vite.config.ts
clip-manager/public/: animations
clip-manager/src/: app.tsx  body-parts.ts  constants.ts  state.ts  types.ts
desktop/: CHANGELOG.md  package.json  tsconfig.json  vite.config.ts
desktop/src/: desktop-app.tsx  updater.tsx  window-chrome.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: AVATAR_APP.md  RELAY.md  SCHEMA.md  SKILL.md  clip-manager-design.md
docs/rfcs/: 089-emotion-blending.md
relay/: package.json  tsconfig.json  wrangler.toml
relay/src/: auth.ts  channel.ts  index.ts  rate-limit.ts  skill-install.ts  types.ts
relay/test/: auth.test.ts  rate-limit.test.ts  router.test.ts  schema.test.ts  skill-install.test.ts
scripts/: extract-pose.ts  gen-skill-md.ts  generate-clips-json.ts  generate-props.mjs  migrate-clips-v2.ts  migrate-clips-v3.ts
skill/: package.json  prompt.md  tsconfig.json
skill/openclaw/: SKILL.md  config.json  filter.ts
web/: package.json  tsconfig.json  vite.config.ts
(+138 files in other folders)
