[package]
name = "project-avatar-desktop"
version = "0.1.0"
description = "Project Avatar — Desktop"
authors = ["linh-n"]
edition = "2021"

[lib]
name = "project_avatar_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
