[package]
name = "project-avatar-desktop"
version = "0.4.0"
description = "Project Avatar — Desktop"
authors = ["linh-n"]
edition = "2021"

[lib]
name = "project_avatar_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
mouse_position = "0.1"
